--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
                 <a class="proposals__link link" href="galery.html">
                     <div class="proposals__title">
                         <img class="proposals__icon__sale img" src="img/iconSale.svg" alt="иконка карты"/>
-                        <h3 class="proposals__title">Продажа</h3>
+                        <p class="proposals__title">Продажа</p>
                     </div>
-                    <h6 class="proposals__text">Широкий ассортимент моделей</h6>
+                    <p class="proposals__text">Широкий ассортимент моделей</p>
                 </a>
             </li>
             <li class="proposals__item">
@@ -156,7 +156,7 @@
                         <img class="proposals__icon__stock img" src="img/iconBox.svg" alt="иконка коробка"/>
                         <h3 class="proposals__title">Продажа</h3>
                     </div>
-                    <h6 class="proposals__text">Широкий ассортимент моделей</h6>
+                    <p class="proposals__text">Широкий ассортимент моделей</p>
                 </a>
             </li>
         </ul>
@@ -166,7 +166,7 @@
                 <h2 class="section__headline">Новинки</h2>
             </div>
 <!--товары-->
-            <article class="section__item">
+            <figure class="section__item">
                 <span class="label">new</span>
                 <a class="section__item__link link" href="#">
                     <img class="section__pict img" src="shoes.jpg" alt="туфли">
@@ -181,8 +181,8 @@
                         <img class="section__reset img" src="iconReset.svg" alt="иконка ресет">
                     </button>
                 </form>
-            </article>
-            <article class="section__item">
+            </figure>
+            <figure class="section__item">
                 <span class="label">new</span>
                 <a class="section__item__link link" href="#">
                     <img class="section__pict img" src="shoes.jpg" alt="туфли">
@@ -197,8 +197,8 @@
                         <img class="section__reset img" src="iconReset.svg" alt="иконка ресет">
                     </button>
                 </form>
-            </article>
-            <article class="section__item">
+            </figure>
+            <figure class="section__item">
                 <span class="label">new</span>
                 <a class="section__item__link link" href="#">
                     <img class="section__pict img" src="shoes.jpg" alt="туфли">
@@ -213,8 +213,8 @@
                         <img class="section__reset img" src="iconReset.svg" alt="иконка ресет">
                     </button>
                 </form>
-            </article>
-            <article class="section__item">
+            </figure>
+            <figure class="section__item">
                 <span class="label">new</span>
                 <a class="section__item__link link" href="#">
                     <img class="section__pict img" src="shoes.jpg" alt="туфли">
@@ -229,7 +229,7 @@
                         <img class="section__reset img" src="iconReset.svg" alt="иконка ресет">
                     </button>
                 </form>
-            </article>
+            </figure>
         </section>
 <!--раздел Товары со скидкой-->
         <section class="section__discounts section">
@@ -237,7 +237,7 @@
                 <h2 class="section__headline">Товары со скидкой</h2>
             </div>
 <!--товары-->
-            <article class="section__item__discounts section__item">
+            <figure class="section__item__discounts section__item">
                 <span class="label">-10%</span>
                 <a class="section__item__link link" href="#">
                     <img class="section__pict img" src="shoes.jpg" alt="туфли">
@@ -252,8 +252,8 @@
                         <img class="section__reset img" src="iconReset.svg" alt="иконка ресет">
                     </button>
                 </form>
-            </article>
-            <article class="section__item__discounts section__item">
+            </figure>
+            <figure class="section__item__discounts section__item">
                 <span class="label">-10%</span>
                 <a class="section__item__link link" href="#">
                     <img class="section__pict img" src="shoes.jpg" alt="туфли">
@@ -268,8 +268,8 @@
                         <img class="section__reset img" src="iconReset.svg" alt="иконка ресет">
                     </button>
                 </form>
-            </article>
-            <article class="section__item__discounts section__item">
+            </figure>
+            <figure class="section__item__discounts section__item">
                 <span class="label">-10%</span>
                 <a class="section__item__link link" href="#">
                     <img class="section__pict img" src="shoes.jpg" alt="туфли">
@@ -284,8 +284,8 @@
                         <img class="section__reset img" src="iconReset.svg" alt="иконка ресет">
                     </button>
                 </form>
-            </article>
-            <article class="section__item__discounts section__item">
+            </figure>
+            <figure class="section__item__discounts section__item">
                 <span class="label">-10%</span>
                 <a class="section__item__link link" href="#">
                     <img class="section__pict img" src="shoes.jpg" alt="туфли">
@@ -300,7 +300,7 @@
                         <img class="section__reset img" src="iconReset.svg" alt="иконка ресет">
                     </button>
                 </form>
-            </article>
+            </figure>
         </section>
     </main>
     <!--Левая колонка-->
