Внес последние исправления

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <div class="section__new__headline">
                 <h2 class="section__headline">Новинки</h2>
             </div>
-<!--товары-->
+<!--товар-->
             <figure class="section__item">
                 <span class="label">new</span>
                 <a class="section__item__link link" href="#">
